# AI-Powered-Retail-Analytics-Inventory-Agent

./: .env.example  MakeFile  README.md  pyproject.toml  requirements.txt  terraform.tfstate
app/: config.py  main.py
app/api/: middleware.py
app/api/routes/: chat.py  forecasting.py  insights.py  inventory.py  reports.py
app/core/: agent.py
app/core/prompts/: system_prompts.py
app/core/tools/: forecasting_tools.py  insight_tools.py  insights_tools.py  inventory_tools.py  report_tools.py
app/models/: enums.py  schemas.py
app/services/: bigquery_service.py  forecast_service.py  insight_service.py  inventory_service.py  openai_service.py  report_service.py
app/utils/: errors.py  helpers.py  logger.py
docker/: DockerFile  docker-compose.yaml
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  services.js
frontend/src/components/: Sidebar.jsx  StatCard.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Extraction.jsx  Forecast.jsx
infrastructure/terraform/: main.tf
scripts/: seed_data.py  setup_bigquery.py
sql/: schema.sql
